# Support-Vector-Machine--linear-to-non-linear

./: README.md  SVM.py  pyproject.toml
